--- a/.config/micro/settings.json
+++ b/.config/micro/settings.json
@@ -2,6 +2,7 @@
     "autoclose": true,
     "autoindent": true,
     "autosave": false,
+    "basename": false,
     "colorcolumn": 0,
     "colorscheme": "atom-dark-tc",
     "cursorline": true,
@@ -13,7 +14,10 @@
     "indentchar": " ",
     "infobar": true,
     "keepautoindent": false,
+    "keymenu": false,
     "linter": true,
+    "literate": true,
+    "matchbrace": false,
     "mouse": true,
     "pluginchannels": [
         "https://raw.githubusercontent.com/micro-editor/plugin-channel/master/channel.json"
@@ -22,13 +26,18 @@
     "rmtrailingws": false,
     "ruler": true,
     "savecursor": false,
+    "savehistory": true,
     "saveundo": false,
+    "scrollbar": false,
     "scrollmargin": 3,
     "scrollspeed": 2,
     "softwrap": false,
     "splitBottom": true,
     "splitRight": true,
+    "splitbottom": true,
+    "splitright": true,
     "statusline": true,
+    "sucmd": "sudo",
     "syntax": true,
     "tabmovement": false,
     "tabsize": 4,
